// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrInput renders a label element 1`] = `
<div
  class=""
>
  <div
    class="cdr-input-label-wrap"
  >
    <label
      class="cdr-input__label"
      for="1"
    >
      Label Test
    </label>
  </div>
  <div
    class="cdr-input-wrap cdr-input--primary"
  >
    <div
      class="cdr-input-inner-wrap"
    >
      <input
        class="cdr-input"
        id="1"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`CdrInput renders required label correctly 1`] = `
<div
  class=""
>
  <div
    class="cdr-input-label-wrap"
  >
    <label
      class="cdr-input__label"
      for="3"
    >
      Label Test
      <span
        aria-label="required"
        class="cdr-input__required-label"
      >
        *
      </span>
    </label>
  </div>
  <div
    class="cdr-input-wrap cdr-input--primary"
  >
    <div
      class="cdr-input-inner-wrap"
    >
      <input
        class="cdr-input"
        id="3"
        required="required"
        type="text"
      />
    </div>
  </div>
</div>
`;
